--- a/app/src/main/res/layout/detail_fragment_layout.xml
+++ b/app/src/main/res/layout/detail_fragment_layout.xml
@@ -16,6 +16,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <include
+                    android:id="@+id/detail_toolbar"
+                    layout="@layout/toolbar" />
+
                 <android.support.design.widget.TabLayout
                     android:id="@+id/details_tabs_layout"
                     android:layout_width="match_parent"
