--- a/app/src/main/res/menu/share_menu.xml
+++ b/app/src/main/res/menu/share_menu.xml
@@ -7,4 +7,10 @@
         android:icon="@android:drawable/ic_menu_share"
         android:title="@string/share_menu"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/refresh_menu"
+        android:icon="@drawable/refresh_icon"
+        android:title="@string/refresh_menu_text"
+        app:showAsAction="ifRoom" />
 </menu>
